--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <section class="gallery">
-    <h2>📸 Yearly History</h2>
+    <h2>📸Our Yearly History </h2>
     <div class="cards">
       <div class="card">
         <img src="images/2021.jpg" alt="2021 Gajanan" />
