--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
     <!-- Supporting Team -->
     <section id="members" class="p-5 bg-light">
         <div class="container">
-            <h2 class="text-center mb-4">Supporting Team</h2>
+            <h2 class="text-center mb-4">Collaboration Team</h2>
             <div class="row" id="supportingTeamCards"></div>
         </div>
     </section>
     <!-- Name list -->
     <section id="nameList" class="p-5 bg-white">
         <div class="container">
-            <h2 class="text-center mb-4">With Best Regards</h2>
+            <h2 class="text-center mb-4">With warmest regards</h2>
             <div class="row" id="nameListCards"></div>
         </div>
     </section>
