--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a class="nav-link" href="#members">Members</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
                 </ul>
-                <button id="langToggle" class="btn btn-light">ଓଡିଆ</button>
+                <!-- <button id="langToggle" class="btn btn-light">ଓଡିଆ</button> -->
             </div>
         </div>
     </nav>
