--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
     </section>
 
     <!-- Members Section -->
-    <section id="members" class="p-5 bg-light">
+    <section id="members" class="p-5 festive-1">
         <div class="container">
             <h2 class="text-center mb-4">Members</h2>
             <div class="row" id="memberCards"></div>
         </div>
     </section>
     <!-- Supporting Team -->
-    <section id="members" class="p-5 bg-light">
+    <section id="members" class="p-5 festive-2">
         <div class="container">
             <h2 class="text-center mb-4">Collaboration Team</h2>
             <div class="row" id="supportingTeamCards"></div>
         </div>
     </section>
     <!-- Name list -->
-    <section id="nameList" class="p-5 bg-white">
+    <section id="nameList" class="p-5 festive-3">
         <div class="container">
             <h2 class="text-center mb-4">With warmest regards</h2>
             <div class="row" id="nameListCards"></div>
