--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 </head>
 
 <body class="festive-background">
-
+    <div id="loaderOverlay">
+        <div class="ganesha-spinner">
+            <img src="images/ganeshLoad.png" alt="Loading..." class="ganesha-image">
+        </div>
+    </div>
 
     <!-- Countdown Timer -->
     <div id="countdown" class="text-center text-white py-2"></div>
