--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <!-- Supporting Team -->
     <section id="members" class="p-5 festive-2">
         <div class="container">
-            <h2 class="text-center mb-4">Collaboration Team</h2>
+            <h2 class="text-center mb-4">Coordination Team</h2>
             <div class="row" id="supportingTeamCards"></div>
         </div>
     </section>
